Corrected version alignment on mobile

--- a/resources/portrait.css
+++ b/resources/portrait.css
@@ -79,7 +79,7 @@
     height: 4vw;
   }
   .supexp {
-    padding-left: 13vw
+    padding-left: 11vw
   }
   .suplat {
     padding-left: 20.9vw
